--- a/app/components/markdown-editor/simplemde.css
+++ b/app/components/markdown-editor/simplemde.css
@@ -1,4 +1,4 @@
-.CodeMirror {
+.markdown-editor .CodeMirror {
 	height: auto;
 	min-height: 300px;
 	border: 1px solid #ddd;
@@ -9,11 +9,11 @@
 	z-index: 1;
 }
 
-.CodeMirror-scroll {
+.markdown-editor .CodeMirror-scroll {
 	min-height: 300px;
 }
 
-.CodeMirror-fullscreen {
+.markdown-editor .CodeMirror-fullscreen {
 	background: #fff;
 	position: fixed !important;
 	top: 50px;
@@ -24,7 +24,7 @@
 	z-index: 9;
 }
 
-.CodeMirror-sided {
+.markdown-editor .CodeMirror-sided {
 	width: 50% !important;
 }
 
@@ -270,63 +270,63 @@
 	padding: 5px;
 }
 
-.CodeMirror .CodeMirror-code .cm-tag {
+.markdown-editor .CodeMirror .CodeMirror-code .cm-tag {
 	color: #63a35c;
 }
 
-.CodeMirror .CodeMirror-code .cm-attribute {
+.markdown-editor .CodeMirror .CodeMirror-code .cm-attribute {
 	color: #795da3;
 }
 
-.CodeMirror .CodeMirror-code .cm-string {
+.markdown-editor .CodeMirror .CodeMirror-code .cm-string {
 	color: #183691;
 }
 
-.CodeMirror .CodeMirror-selected {
+.markdown-editor .CodeMirror .CodeMirror-selected {
 	background: #d9d9d9;
 }
 
-.CodeMirror .CodeMirror-code .cm-header-1 {
+.markdown-editor .CodeMirror .CodeMirror-code .cm-header-1 {
 	font-size: 200%;
 	line-height: 200%;
 }
 
-.CodeMirror .CodeMirror-code .cm-header-2 {
+.markdown-editor .CodeMirror .CodeMirror-code .cm-header-2 {
 	font-size: 160%;
 	line-height: 160%;
 }
 
-.CodeMirror .CodeMirror-code .cm-header-3 {
+.markdown-editor .CodeMirror .CodeMirror-code .cm-header-3 {
 	font-size: 125%;
 	line-height: 125%;
 }
 
-.CodeMirror .CodeMirror-code .cm-header-4 {
+.markdown-editor .CodeMirror .CodeMirror-code .cm-header-4 {
 	font-size: 110%;
 	line-height: 110%;
 }
 
-.CodeMirror .CodeMirror-code .cm-comment {
+.markdown-editor .CodeMirror .CodeMirror-code .cm-comment {
 	background: rgba(0, 0, 0, 0.05);
 	border-radius: 2px;
 }
 
-.CodeMirror .CodeMirror-code .cm-link {
+.markdown-editor .CodeMirror .CodeMirror-code .cm-link {
 	color: #7f8c8d;
 }
 
-.CodeMirror .CodeMirror-code .cm-url {
+.markdown-editor .CodeMirror .CodeMirror-code .cm-url {
 	color: #aab2b3;
 }
 
-.CodeMirror .CodeMirror-code .cm-strikethrough {
+.markdown-editor .CodeMirror .CodeMirror-code .cm-strikethrough {
 	text-decoration: line-through;
 }
 
-.CodeMirror .CodeMirror-placeholder {
+.markdown-editor .CodeMirror .CodeMirror-placeholder {
 	opacity: 0.5;
 }
 
-.CodeMirror .cm-spell-error:not(.cm-url):not(.cm-comment):not(.cm-tag):not(.cm-word) {
+.markdown-editor .CodeMirror .cm-spell-error:not(.cm-url):not(.cm-comment):not(.cm-tag):not(.cm-word) {
 	background: rgba(255, 0, 0, 0.15);
 }
