--- a/app/css/editor.css
+++ b/app/css/editor.css
@@ -2,6 +2,10 @@
 	height: auto !important;
 }
 
+.Lesson {
+	overflow: hidden;
+}
+
 .common_x97hsk.overflowScroll_eywtei {
 	height: 100% !important;
 }
