Remove unnecessary code

--- a/app/components/seal/seal.css
+++ b/app/components/seal/seal.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Amatic+SC');
+@import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono');
 
 .seal-container {
 	position: relative;
