Fix spectacle styles

--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -215,8 +215,10 @@ mark {
 }
 
 .Presentation {
+	font-family: 'Open Sans', sans-serif;
 	width: 100%;
 	height: 100%;
+	min-height: 100vh;
 	display: block;
 }
 
@@ -2270,6 +2272,11 @@ label {
 	shape-outside: url(https://isle.heinz.cmu.edu/Summertime_bird3.png);
 	shape-image-threshold: 0;
 	shape-margin: 30px;
+}
+
+.contextmenu-fullscreen {
+	height: 100%;
+	width: 100%;
 }
 
 .react-contextmenu {
