--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -216,6 +216,7 @@ mark {
 
 .Presentation {
 	font-family: 'Open Sans', sans-serif;
+	font-size: 22px;
 	width: 100%;
 	height: 100%;
 	min-height: 100vh;
