--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -216,11 +216,14 @@ mark {
 
 .Presentation {
 	font-family: 'Open Sans', sans-serif;
-	font-size: 22px;
 	width: 100%;
 	height: 100%;
 	min-height: 100vh;
 	display: block;
+}
+
+.spectacle-deck {
+	font-size: 24px;
 }
 
 .panel-heading {
