--- a/app/components/markdown-editor/markdown_editor.css
+++ b/app/components/markdown-editor/markdown_editor.css
@@ -3,6 +3,8 @@
 	border-radius: 6px;
 	box-shadow: 0 0 8px rgba(92, 92, 92, 0.5);
 	margin-bottom: 15px;
+	text-align: left;
+	font-size: 16px;
 }
 
 .CodeMirror {
